--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.2",
 		"svelte-feather-icons": "^4.0.0",
+		"svelte-lazy-image": "^0.5.1",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
