--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@playwright/test": "^1.30.0",
 		"@sveltejs/adapter-auto": "^1.0.2",
 		"@sveltejs/kit": "^1.3.2",
+		"@types/lodash-es": "^4.17.6",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
 		"autoprefixer": "^10.4.13",
@@ -24,6 +25,7 @@
 		"eslint": "^8.32.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"lodash-es": "^4.17.21",
 		"pocketbase": "^0.10.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.3",
