--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
 		"check": "svelte-kit sync && svelte-check",
 		"check:watch": "svelte-kit sync && svelte-check --watch",
 		"test:unit": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.30.0",
-		"@sveltejs/adapter-auto": "^1.0.2",
-		"@sveltejs/kit": "^1.3.2",
-		"@types/lodash-es": "^4.17.6",
-		"@typescript-eslint/eslint-plugin": "^5.49.0",
-		"@typescript-eslint/parser": "^5.49.0",
-		"autoprefixer": "^10.4.13",
-		"daisyui": "^2.49.0",
-		"eslint": "^8.32.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"@playwright/test": "^1.39.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.25.2",
+		"@types/lodash-es": "^4.17.9",
+		"@typescript-eslint/eslint-plugin": "^6.7.5",
+		"@typescript-eslint/parser": "^6.7.5",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.9.2",
+		"eslint": "^8.51.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.34.0",
+		"iconify-icon": "^1.0.8",
 		"lodash-es": "^4.17.21",
-		"pocketbase": "^0.10.1",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.3",
-		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-feather-icons": "^4.0.0",
+		"pocketbase": "^0.18.2",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
 		"svelte-lazy-image": "^0.5.1",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.5.0",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.4",
-		"vitest": "^0.28.3"
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.11",
+		"vitest": "^0.34.6"
 	},
 	"type": "module"
 }
