daisyui gegen skeleton-ui getauscht
- DaisyUI durch sekeltonUI abgelöst und an den bislang gefundenen Stellen ausgetauscht
- Allgemeine Styling-Anpassungen
- eslint-Fehler korrigiert

--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.4",
 		"@playwright/test": "^1.39.0",
+		"@skeletonlabs/skeleton": "^2.3.0",
+		"@skeletonlabs/tw-plugin": "^0.2.2",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.25.2",
+		"@tailwindcss/forms": "^0.5.6",
 		"@types/lodash-es": "^4.17.9",
 		"@typescript-eslint/eslint-plugin": "^6.7.5",
 		"@typescript-eslint/parser": "^6.7.5",
 		"autoprefixer": "^10.4.16",
-		"daisyui": "^3.9.2",
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
@@ -29,6 +32,7 @@
 		"lodash-es": "^4.17.21",
 		"pocketbase": "^0.18.2",
 		"postcss": "^8.4.31",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.2.1",
